knowledge/kubernetes+docker/yaml/bookinfo/route-rule-rating-test-delay.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=jason)(;.*)?$"
    fault:
      delay:
        percent: 100
        fixedDelay: 2.5s # 超过3s，review v1访问就会提示错误了;超过2.5s，review v3访问就会提示错误了
    route:
    - destination:
        host: ratings
        subset: v1
  - route:
    - destination:
        host: ratings
        subset: v1
